--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.1",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "eslint": "^8.41.0",
